@@ -27,7 +27,9 @@ import java.security.GeneralSecurityException;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.EnumMap;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -35,6 +37,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 
 import com.fasterxml.jackson.core.JsonParseException;
 import com.fasterxml.jackson.databind.JsonMappingException;
@@ -63,7 +67,6 @@ import com.argosnotary.argos.domain.crypto.signing.Signer;
 import com.argosnotary.argos.domain.layout.ArtifactType;
 import com.argosnotary.argos.domain.layout.Layout;
 import com.argosnotary.argos.domain.layout.LayoutMetaBlock;
-import com.argosnotary.argos.domain.layout.LayoutSegment;
 import com.argosnotary.argos.domain.layout.Step;
 import com.argosnotary.argos.domain.layout.Step.StepBuilder;
 import com.argosnotary.argos.domain.layout.rule.MatchRule;
@@ -88,14 +91,7 @@ class VerificationTest {
 
     private VerificationProvider verificationProvider;
     
-    private char[] passphrase = "test".toCharArray();
-    
-    private String SUPPLYCHAIN_NAME = "supplyChain";
-    
     private String SUPPLYCHAIN_ID = "supplyChainId";
-    
-    private String SEGMENT1 = "segment1";
-    private String SEGMENT2 = "segment2";
     
     private char[] PASSWORD = "password".toCharArray();
     
@@ -107,10 +103,10 @@ class VerificationTest {
     private PublicKey alicePublicKey;
     private PublicKey carlPublicKey;
     
-    StepBuilder segment1Step1Builder;
-    LinkBuilder segment1Step1LinkBuilder;
-    StepBuilder segment2Step1Builder;
-    LinkBuilder segment2Step1LinkBuilder;
+    StepBuilder step1Builder;
+    LinkBuilder step1LinkBuilder;
+    StepBuilder step2Builder;
+    LinkBuilder step2LinkBuilder;
     
 
     
@@ -152,23 +148,21 @@ class VerificationTest {
         verificationProvider = new VerificationProvider(verifications, verificationContextsProvider);
         verificationProvider.init();
     
-        segment1Step1LinkBuilder = Link.builder()
-                .layoutSegmentName("segment1")
+        step1LinkBuilder = Link.builder()
                 .stepName("step1");
-        segment1Step1Builder = Step.builder()
+        step1Builder = Step.builder()
                 .name("step1");
-        segment2Step1LinkBuilder = Link.builder()
-                .layoutSegmentName("segment2")
-                .stepName("step1");
-        segment2Step1Builder = Step.builder()
-                .name("step1");
+        step2LinkBuilder = Link.builder()
+                .stepName("step2");
+        step2Builder = Step.builder()
+                .name("step2");
     }
 
     @Test
     void happyFlow() throws JsonParseException, JsonMappingException, IOException, GeneralSecurityException {        
         Artifact artifact1 = new Artifact("file1", "hash1");
         
-        Step step1 = segment1Step1Builder
+        Step step1 = step1Builder
                 .authorizedKeyIds(List.of(aliceKey.getKeyId()))
                 .expectedMaterials(List.of(new Rule(RuleType.ALLOW, "**")))
                 .expectedProducts(List.of(new Rule(RuleType.ALLOW, "**")))
@@ -177,35 +171,29 @@ class VerificationTest {
                 .authorizedKeyIds(List.of(bobKey.getKeyId()))
                 .keys(List.of(bobPublicKey,alicePublicKey))
                 .expectedEndProducts(List.of(MatchRule.builder()
-                        .destinationSegmentName("segment1")
                         .destinationStepName("step1")
                         .destinationType(ArtifactType.PRODUCTS)
                         .pattern("**").build()))
-                .layoutSegments(List.of(LayoutSegment.builder()
-                        .name("segment1").steps(List.of(step1)).build()))
+                .steps(List.of(step1))
                 .build();
         Signature signature = Signer.sign(bobKey, PASSWORD, new JsonSigningSerializer().serialize(layout));
         LayoutMetaBlock layoutMetaBlock  = LayoutMetaBlock.builder().supplyChainId(SUPPLYCHAIN_ID).layout(layout).signatures(List.of(signature)).build();
         
-        Link segment1Step1Link = segment1Step1LinkBuilder
-                .runId("runId1")
+        Link step1Link = step1LinkBuilder
                 .materials(List.of(artifact1))
                 .products(List.of(artifact1))
                 .build();
         
-        signature = Signer.sign(aliceKey, PASSWORD, new JsonSigningSerializer().serialize(segment1Step1Link));
-        LinkMetaBlock alicesStep1Block  = LinkMetaBlock.builder().link(segment1Step1Link).signature(signature).build();
+        signature = Signer.sign(aliceKey, PASSWORD, new JsonSigningSerializer().serialize(step1Link));
+        LinkMetaBlock alicesStep1Block  = LinkMetaBlock.builder().link(step1Link).signature(signature).build();
         EnumMap<ArtifactType, Set<Artifact>> artifactTypeHashes = new EnumMap<>(ArtifactType.class);
         artifactTypeHashes.put(ArtifactType.PRODUCTS, Set.of(artifact1));
-        when(linkMetaBlockRepository.findBySupplyChainAndSegmentNameAndStepNameAndArtifactTypesAndArtifactHashes(
-                SUPPLYCHAIN_ID,
-                SEGMENT1,
-                step1.getName(),
-                artifactTypeHashes)).thenReturn(List.of(alicesStep1Block));
-
-        when(linkMetaBlockRepository.findByRunId(SUPPLYCHAIN_ID, SEGMENT1, "runId1", Set.of("step1"))).thenReturn(List.of());
+        Map<String, EnumMap<ArtifactType, Set<Artifact>>> stepMap = new HashMap<>();
+        stepMap.put(step1.getName(), artifactTypeHashes);
         
-        VerificationRunResult result = verificationProvider.verifyRun(layoutMetaBlock, List.of(artifact1));
+        when(linkMetaBlockRepository.findBySupplyChainId(SUPPLYCHAIN_ID)).thenReturn(Arrays.asList(alicesStep1Block));
+
+        VerificationRunResult result = verificationProvider.verifyRun(layoutMetaBlock, Set.of(artifact1));
         assertTrue(result.isRunIsValid());        
     }
     
@@ -218,7 +206,7 @@ class VerificationTest {
         Artifact artifact4 = new Artifact("file4", "hash4");
         Artifact artifact5 = new Artifact("file5", "hash5");
         
-        Step step1 = segment1Step1Builder
+        Step step1 = step1Builder
                 .authorizedKeyIds(List.of(aliceKey.getKeyId()))
                 .expectedMaterials(List.of(
                         new Rule(RuleType.REQUIRE, "f*3"),
@@ -232,7 +220,6 @@ class VerificationTest {
                         new Rule(RuleType.CREATE, "file1"),
                         MatchRule.builder()
                             .pattern("*5")
-                            .destinationSegmentName(SEGMENT1)
                             .destinationStepName("step1")
                             .destinationType(ArtifactType.MATERIALS).build(),
                         new Rule(RuleType.ALLOW, "**")))
@@ -242,19 +229,16 @@ class VerificationTest {
                 .authorizedKeyIds(List.of(bobKey.getKeyId()))
                 .keys(List.of(bobPublicKey,alicePublicKey))
                 .expectedEndProducts(List.of(MatchRule.builder()
-                        .destinationSegmentName("segment1")
                         .destinationStepName("step1")
                         .destinationType(ArtifactType.PRODUCTS)
                         .pattern("*5").build()))
-                .layoutSegments(List.of(LayoutSegment.builder()
-                        .name("segment1").steps(List.of(step1)).build()))
+                .steps(List.of(step1))
                 .build();
         
         Signature signature = Signer.sign(bobKey, PASSWORD, new JsonSigningSerializer().serialize(layout));
         LayoutMetaBlock layoutMetaBlock  = LayoutMetaBlock.builder().supplyChainId(SUPPLYCHAIN_ID).layout(layout).signatures(List.of(signature)).build();
         
-        Link segment1Step1Link = segment1Step1LinkBuilder
-                .runId("runId1")
+        Link segment1Step1Link = step1LinkBuilder
                 .materials(List.of(artifact21, artifact3, artifact4, artifact5))
                 .products(List.of(artifact1, artifact22, artifact5))
                 .build();
@@ -264,16 +248,10 @@ class VerificationTest {
 
         EnumMap<ArtifactType, Set<Artifact>> artifactTypeHashes = new EnumMap<>(ArtifactType.class);
         artifactTypeHashes.put(ArtifactType.PRODUCTS, Set.of(artifact5));
-
-        when(linkMetaBlockRepository.findBySupplyChainAndSegmentNameAndStepNameAndArtifactTypesAndArtifactHashes(
-                SUPPLYCHAIN_ID,
-                SEGMENT1,
-                step1.getName(),
-                artifactTypeHashes)).thenReturn(List.of(alicesStep1Block));
-
-        when(linkMetaBlockRepository.findByRunId(SUPPLYCHAIN_ID, SEGMENT1, "runId1", Set.of("step1"))).thenReturn(List.of());
         
-        VerificationRunResult result = verificationProvider.verifyRun(layoutMetaBlock, List.of(artifact5));
+        when(linkMetaBlockRepository.findBySupplyChainId(SUPPLYCHAIN_ID)).thenReturn(List.of(alicesStep1Block));
+
+        VerificationRunResult result = verificationProvider.verifyRun(layoutMetaBlock, Set.of(artifact5));
         assertTrue(result.isRunIsValid());        
     }
     
@@ -283,15 +261,14 @@ class VerificationTest {
         Artifact artifact1Dir2 = new Artifact("dir2/file1", "hash1");
         Artifact artifact1 = new Artifact("dir1/file1", "hash1");
         
-        Step segment1Step1 = segment1Step1Builder
+        Step step1 = step1Builder
                 .authorizedKeyIds(List.of(aliceKey.getKeyId()))
                 .expectedMaterials(List.of(
                         MatchRule.builder()
                             .pattern("file1")
                             .sourcePathPrefix("dir1")
                             .destinationPathPrefix("dir2")
-                            .destinationSegmentName(SEGMENT2)
-                            .destinationStepName("step1")
+                            .destinationStepName("step2")
                             .destinationType(ArtifactType.PRODUCTS)
                             .build()
                         ))
@@ -299,7 +276,7 @@ class VerificationTest {
                         new Rule(RuleType.ALLOW, "**")))
                 .requiredNumberOfLinks(1).build();
         
-        Step segment2Step1 = segment2Step1Builder
+        Step step2 = step2Builder
                 .authorizedKeyIds(List.of(aliceKey.getKeyId()))
                 .expectedMaterials(List.of(
                         new Rule(RuleType.ALLOW, "**")
@@ -312,63 +289,42 @@ class VerificationTest {
                 .authorizedKeyIds(List.of(bobKey.getKeyId()))
                 .keys(List.of(bobPublicKey,alicePublicKey))
                 .expectedEndProducts(List.of(MatchRule.builder()
-                        .destinationSegmentName(SEGMENT1)
                         .destinationStepName("step1")
                         .destinationType(ArtifactType.PRODUCTS)
                         .pattern("**").build()))
-                .layoutSegments(List.of(
-                        LayoutSegment.builder()
-                            .name(SEGMENT1)
-                            .steps(List.of(segment1Step1))
-                            .build(),
-                        LayoutSegment.builder()
-                            .name(SEGMENT2)
-                            .steps(List.of(segment2Step1))
-                            .build()))
+                .steps(List.of(step1, step2))
                 .build();
         
         Signature signature = Signer.sign(bobKey, PASSWORD, new JsonSigningSerializer().serialize(layout));
         LayoutMetaBlock layoutMetaBlock  = LayoutMetaBlock.builder().supplyChainId(SUPPLYCHAIN_ID).layout(layout).signatures(List.of(signature)).build();
         
-        Link segment1Step1Link = segment1Step1LinkBuilder
-                .runId("runId1")
+        Link segment1Step1Link = step1LinkBuilder
                 .materials(List.of(artifact1Dir1))
                 .products(List.of(artifact1Dir1))
                 .build();
         
-        Link segment2Step1Link = segment2Step1LinkBuilder
-                .runId("runId2")
-                .materials(List.of(artifact1Dir2))
+        Link segment2Step1Link = step2LinkBuilder
                 .products(List.of(artifact1Dir2))
                 .build();
         
         signature = Signer.sign(aliceKey, PASSWORD, new JsonSigningSerializer().serialize(segment1Step1Link));
-        LinkMetaBlock alicesSegment1Step1Block  = LinkMetaBlock.builder().link(segment1Step1Link).signature(signature).build();
+        LinkMetaBlock alicesStep1Block  = LinkMetaBlock.builder().link(segment1Step1Link).signature(signature).build();
         signature = Signer.sign(aliceKey, PASSWORD, new JsonSigningSerializer().serialize(segment2Step1Link));
-        LinkMetaBlock alicesSegment2Step1Block  = LinkMetaBlock.builder().link(segment2Step1Link).signature(signature).build();
+        LinkMetaBlock alicesStep2Block  = LinkMetaBlock.builder().link(segment2Step1Link).signature(signature).build();
 
         EnumMap<ArtifactType, Set<Artifact>> artifactTypeHashes1 = new EnumMap<>(ArtifactType.class);
         artifactTypeHashes1.put(ArtifactType.PRODUCTS, Set.of(artifact1Dir1));
         
         EnumMap<ArtifactType, Set<Artifact>> artifactTypeHashes2 = new EnumMap<>(ArtifactType.class);
         artifactTypeHashes2.put(ArtifactType.PRODUCTS, Set.of(artifact1Dir2));
-
-        when(linkMetaBlockRepository.findBySupplyChainAndSegmentNameAndStepNameAndArtifactTypesAndArtifactHashes(
-                SUPPLYCHAIN_ID,
-                SEGMENT1,
-                segment1Step1.getName(),
-                artifactTypeHashes1)).thenReturn(List.of(alicesSegment1Step1Block));
-
-        when(linkMetaBlockRepository.findBySupplyChainAndSegmentNameAndStepNameAndArtifactTypesAndArtifactHashes(
-                SUPPLYCHAIN_ID,
-                SEGMENT2,
-                segment2Step1.getName(),
-                artifactTypeHashes2)).thenReturn(List.of(alicesSegment2Step1Block));
-
-        when(linkMetaBlockRepository.findByRunId(SUPPLYCHAIN_ID, SEGMENT1, "runId1", Set.of("step1"))).thenReturn(List.of());
-        when(linkMetaBlockRepository.findByRunId(SUPPLYCHAIN_ID, SEGMENT2, "runId2", Set.of("step1"))).thenReturn(List.of());
         
-        VerificationRunResult result = verificationProvider.verifyRun(layoutMetaBlock, List.of(artifact1));
+        Map<String, EnumMap<ArtifactType, Set<Artifact>>> stepMap = new HashMap<>();
+        stepMap.put(step1.getName(), artifactTypeHashes1);
+        stepMap.put(step2.getName(), artifactTypeHashes2);
+
+        when(linkMetaBlockRepository.findBySupplyChainId(SUPPLYCHAIN_ID)).thenReturn(List.of(alicesStep1Block, alicesStep2Block));
+        
+        VerificationRunResult result = verificationProvider.verifyRun(layoutMetaBlock, Set.of(artifact1));
         assertTrue(result.isRunIsValid());        
     }
 
